# torchregister

./: .pre-commit-config.yaml  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  TODO.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: IMAGE_DIMENSIONS.md
examples/: affine_registration_example.py  multi_modal_registration.py  rdmm_registration_example.py  register_affine_cli.py
tests/: conftest.py  test_affine.py  test_metrics.py  test_plan.md  test_processing.py  test_rdmm.py  test_transform_conversion.py  test_utils.py
torchregister/: __init__.py  affine.py  base.py  conversion.py  io.py  metrics.py  processing.py  rdmm.py  transforms.py  utils.py
